Updated print, proper formatting used